--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ concurrency:
 
 env:
   REGISTRY: ghcr.io # Only used for labeling, if you want to push it make sure you have permissions to push.
-  IMAGE_NAME: ${{ github.repository   }}
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-image:
@@ -19,9 +19,40 @@ jobs:
 
     permissions:
       contents: read
+      packages: write  # ADD THIS LINE for GHCR push permission
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # TODO: Maybe there's an action that does this for us.
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Login to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=sha
+            
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
