postgres build test

--- a/.github/workflows/test-postgres.yml
+++ b/.github/workflows/test-postgres.yml
@@ -2,9 +2,9 @@ name: Test with PostgreSQL
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, feat ]
   push:
-    branches: [ main ]
+    branches: [ main, feat ]
 
 jobs:
   test-postgres:
