--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Run Tests
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, feat ]
   push:
-    branches: [ main ]
+    branches: [ main, feat ]
 
 jobs:
   test-sqlite:
