updated testing files and kub svc deployment issues. Changed pvc to support Minikube

--- a/manifests/pvc.yml
+++ b/manifests/pvc.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: efs
+  storageClassName: standard  # Change from 'efs' to 'standard'
   resources:
     requests:
       storage: 5Gi
