Missing files added [Prometheus added, svc and postgres-deployment update]

--- a/manifests/postgres-deployment.yml
+++ b/manifests/postgres-deployment.yml
@@ -55,4 +55,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
-  storageClassName: standard
+  storageClassName: standard   #Minikube default
